--- a/extra-libs/mystyle.css
+++ b/extra-libs/mystyle.css
@@ -1,39 +1,38 @@
-
 .dataTables_info,
 .dataTables_length label,
-.dataTables_filter label{
-    font-size: 14px;
+.dataTables_filter label {
+	font-size: 14px;
 }
 
-table td{
-    padding:0px !important;
-    vertical-align: middle !important;
+table td {
+	padding-top: 1px;
+	vertical-align: middle !important;
 }
 
 .pagination .page-item .page-link {
-    border-radius: 0px !important;
-    width: auto !important;
+	border-radius: 0px !important;
+	width: auto !important;
 }
 
-.page-item.active .page-link {
-    z-index: 3 !important;
-    color: #fff !important;
-    background-color: #007bff !important;
-    border-color: #007bff !important;
+.page-item .active .page-link {
+	z-index: 3 !important;
+	color: #fff !important;
+	background-color: #007bff !important;
+	border-color: #007bff !important;
 }
 
 .page-link {
-    position: relative !important;
-    display: block !important;
-    padding: 0.5rem 0.75rem !important;
-    margin-left: -1px !important;
-    line-height: 1.25 !important;
-    color: #007bff !important;
-    background-color: #fff !important;
-    border: 1px solid #dee2e6 !important;
+	position: relative !important;
+	display: block !important;
+	padding: 0.5rem 0.75rem !important;
+	margin-left: -1px !important;
+	line-height: 1.25 !important;
+	color: #007bff !important;
+	background-color: #fff !important;
+	border: 1px solid #dee2e6 !important;
 }
 
-.btn{
-    margin:2px !important;
-    padding: 6px 10px !important;
+.btn {
+	margin: 2px !important;
+	padding: 6px 10px !important;
 }
